Refreshing the FindAllPrisonersTest